man_MANS =
CLEANFILES =
EXTRA_DIST =

XSLTPROC = xsltproc

XSLTPROC_FLAGS = --xinclude --nonet

XSLTPROC_MAN_FLAGS = \
	$(XSLTPROC_FLAGS) \
	--stringparam man.output.quietly 1 \
	--stringparam funcsynopsis.style ansi \
	--stringparam man.th.extra1.suppress 1 \
	--stringparam man.authors.section.enabled 0 \
	--stringparam man.copyright.section.enabled 0 \
	http://docbook.sourceforge.net/release/xsl/current/manpages/docbook.xsl

if ENABLE_GTK_DOC

%.8: %.xml
	$(AM_V_GEN) xsltproc $(XSLTPROC_MAN_FLAGS) $<

%.5: %.xml
	$(AM_V_GEN) xsltproc $(XSLTPROC_MAN_FLAGS) $<

endif

CLEANFILES += NetworkManager.conf.xml
EXTRA_DIST += NetworkManager.conf.xml.in
NetworkManager.conf.xml: $(srcdir)/NetworkManager.conf.xml.in
	 $(AM_V_GEN)  sed \
		-e 's|[@]NM_CONFIG_DEFAULT_AUTH_POLKIT_TEXT[@]|$(NM_CONFIG_DEFAULT_AUTH_POLKIT_TEXT)|g' \
		-e 's|[@]NM_CONFIG_KEYFILE_PATH_DEFAULT[@]|$(nmconfdir)/conf.d|g' \
		-e 's|[@]NM_CONFIG_LOGGING_BACKEND_DEFAULT_TEXT[@]|$(NM_CONFIG_LOGGING_BACKEND_DEFAULT_TEXT)|g' \
		-e 's|[@]NM_CONFIG_DEFAULT_LOGGING_AUDIT_TEXT[@]|$(NM_CONFIG_DEFAULT_LOGGING_AUDIT_TEXT)|g' \
		$< >$@

if BUILD_SETTING_DOCS

nm-settings.xml: nm-settings.xsl $(top_builddir)/libnm/nm-setting-docs.xml
	$(AM_V_GEN) xsltproc \
		--output $@ \
		--stringparam version $(NM_VERSION) \
		--stringparam date "`date +'%d %B %Y'`" \
		$^

nm-settings-keyfile.xml: nm-settings-keyfile.xsl $(top_builddir)/libnm/nm-keyfile-docs.xml
	$(AM_V_GEN) xsltproc \
		--output $@ \
		--stringparam version $(NM_VERSION) \
		--stringparam date "`date +'%d %B %Y'`" \
		$^

nm-settings-ifcfg-rh.xml: nm-settings-ifcfg-rh.xsl $(top_builddir)/libnm/nm-ifcfg-rh-docs.xml
	$(AM_V_GEN) xsltproc \
		--output $@ \
		--stringparam version $(NM_VERSION) \
		--stringparam date "`date +'%d %B %Y'`" \
		$^

CLEANFILES +=				\
	nm-settings.xml			\
	nm-settings-keyfile.xml		\
	nm-settings-ifcfg-rh.xml

endif

configure_generated_man_pages =		\
	nmcli.1				\
	nmtui.1				\
	nm-online.1			\
	nm-system-settings.conf.5

docbook_generated_man_pages =		\
	NetworkManager.8		\
	NetworkManager.conf.5		\
	nmcli-examples.5

docbook_autogenerated_man_pages =	\
	nm-settings.5			\
	nm-settings-keyfile.5

if CONFIG_PLUGIN_IFCFG_RH
docbook_autogenerated_man_pages += nm-settings-ifcfg-rh.5
else
EXTRA_DIST += nm-settings-ifcfg-rh.5
endif

EXTRA_DIST +=								\
	nm-settings.xml							\
	nm-settings.xsl							\
	nm-settings-keyfile.xml						\
	nm-settings-keyfile.xsl						\
	nm-settings-ifcfg-rh.xml					\
	nm-settings-ifcfg-rh.xsl					\
	$(addsuffix .xml,$(basename $(docbook_generated_man_pages)))	\
	$(docbook_generated_man_pages) \
	$(docbook_autogenerated_man_pages)

man_MANS += $(configure_generated_man_pages)

links = nmtui-edit nmtui-connect nmtui-hostname

install-data-hook:
	for link in $(links); do \
		ln -f $(DESTDIR)$(mandir)/man1/nmtui.1 $(DESTDIR)$(mandir)/man1/$$link.1; \
	done

uninstall-hook:
	for link in $(links); do \
		rm -f $(DESTDIR)$(mandir)/man1/$$link.1; \
	done

if ENABLE_GTK_DOC
man_MANS += $(docbook_generated_man_pages)
CLEANFILES += $(docbook_generated_man_pages)
if SETTING_DOCS_AVAILABLE
man_MANS += $(docbook_autogenerated_man_pages)
CLEANFILES += $(docbook_autogenerated_man_pages)
endif
else
if INSTALL_PREGEN_MANPAGES
man_MANS +=					\
	$(docbook_generated_man_pages)		\
	$(docbook_autogenerated_man_pages)
endif
endif
